fixed cloud overflow in other browsers

--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,11 @@ p {
   font-size: 24px;
 }
 
-body {
+.body-div {
   overflow-x: hidden;
+}
+
+body {
   height: 100vh;
 }
 
